<rdar://problem/11686974>
Created attachment 148791 [details] Sad but effective patch
Comment on attachment 148791 [details] Sad but effective patch It does not seem acceptable to add a synchronous message here. r-.
(In reply to comment #2) > (From update of attachment 148791 [details]) > It does not seem acceptable to add a synchronous message here. > > r-. I suppose it's worth noting that every other WebProcess->UIProcess message apart from DidReceiveEvent involved in keyboard input is already synchronous. Not sure how to solve this one cleanly. May have to rethink the r120329 instead.
Comment on attachment 148791 [details] Sad but effective patch Since it is unclear how to make this work easily without AppKit changes, lets take this for now. Please file a follow up to remove this message.
Also, please try to construct a test in TestWebKitAPI as well (this does not need to gate checkin).
Comment on attachment 148791 [details] Sad but effective patch Clearing flags on attachment: 148791 Committed r121113: <http://trac.webkit.org/changeset/121113>
All reviewed patches have been landed. Closing bug.
Looks like this is causing a bunch of new assertions on the bots: http://build.webkit.org/results/Apple%20Lion%20Debug%20WK2%20(Tests)/r121121%20(535)/results.html
(In reply to comment #8) > Looks like this is causing a bunch of new assertions on the bots: > http://build.webkit.org/results/Apple%20Lion%20Debug%20WK2%20(Tests)/r121121%20(535)/results.html Roger. WebPageProxy::handleKeyboardEvent() should be calling didReceiveKeyEvent() rather than didReceiveEvent(). Fixing in a minute(tm).
Committed r121138: <http://trac.webkit.org/changeset/121138>